RESOLVED FIXED284862
Reproducible RELEASE_ASSERT in GridTrackSizingAlgorithm::copyUsedTrackSizesForSubgrid
https://bugs.webkit.org/show_bug.cgi?id=284862
Summary Reproducible RELEASE_ASSERT in GridTrackSizingAlgorithm::copyUsedTrackSizesFo...
Anil Hebbar
Reported 2024-12-17 17:43:31 PST
Created attachment 473589 [details] The above file causes the bug It seems like the bug occurs when we do a second pass of layout due to a style mutation. On the initial pass we have an outer grid that contains some nested subgrids. The style mutation that seems to cause the bug to reproduce is when we apply layout containment to the outer subgrid. When you apply layout containment on a subgrid it causes the box to establish an independent formatting context, which according to the spec means that this box cannot be a subgrid and should just fall back to being a normal grid. This means that it can no longer share any rows from its parent and instead needs to be treated as a separate grid item in the parent grid. The fix is to make sure the element is marked as changed when the layout has changed.
Attachments
The above file causes the bug (551 bytes, text/html)
2024-12-17 17:43 PST, Anil Hebbar
no flags
Alexey Proskuryakov
Comment 1 2024-12-19 16:59:25 PST
This test crashes with a RELEASE_ASSERT in release build.
Radar WebKit Bug Importer
Comment 2 2024-12-19 16:59:35 PST
Anil Hebbar
Comment 3 2024-12-19 20:04:13 PST
Anil Hebbar
Comment 4 2024-12-19 20:04:56 PST
Sammy Gill
Comment 5 2025-01-14 17:58:01 PST
EWS
Comment 6 2025-01-16 20:13:52 PST
Committed 289038@main (225e7c33ad49): <https://commits.webkit.org/289038@main> Reviewed commits have been landed. Closing PR #39044 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.